# MalScanPlusPlus

./: .gitignore  CMakeLists.txt  MalScan_Blueprint.md  README.md  vcpkg.json
include/: EntropyAnalyzer.h  FileInfo.h  ReportGenerator.h  RiskEngine.h  Scanner.h  Utils.h
public/: app.js  index.html  style.css
src/: main.cpp
src/analyzers/: EntropyAnalyzer.cpp
src/core/: RiskEngine.cpp  Scanner.cpp
src/reporting/: ReportGenerator.cpp
